test/resources/parser/failing/testStructure5.scala
object UnclosedObject {
  val x: Int = 1
// Missing closing brace